angular dev, erinevad vaated

--- a/CSGOMatches/Web/Views/Home/Index.cshtml
+++ b/CSGOMatches/Web/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿<div class="row" ng-app="matchesapp" ng-controller="homeController">
-    <div class="col-md-4">
-        <p>Sisse logitud kasutaja: <span>{{user}}</span></p>
-        <p>Values: <span>{{values}}</span></p>
-    </div>
-</div>
+﻿
+    @*<p><a href="#login">Login / Logout</a></p>
+    <p><a href="#/">Home</a></p>*@
+    <div ng-view></div>
