--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -8,36 +8,17 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
+<body ng-app="app">
+    
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+
 
 <script src="~/Scripts/angular.js"></script>
+<script src="~/Scripts/angular-route.js"></script>
 <script src="~/app/app.js"></script>
-<script src="~/app/controllers/homeController.js"></script>
 <script src="~/app/services/usersService.js"></script>
+<script src="~/app/controllers/homeController.js"></script>
+<script src="~/app/controllers/loginlogoutController.js"></script>
 
 @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
