--- a/CSGOMatches/Web/Views/Home/Index.cshtml
+++ b/CSGOMatches/Web/Views/Home/Index.cshtml
@@ -1,4 +1,11 @@
-﻿
-    @*<p><a href="#login">Login / Logout</a></p>
-    <p><a href="#/">Home</a></p>*@
-    <div ng-view></div>
+﻿<div class="header">
+    <h1>CSGO Matches</h1>
+</div>
+<div class="content">
+    <div class="container">
+        <div ng-view></div>
+    </div>
+</div>
+<div class="footer"></div>
+
+    
