--- a/CSGOMatches/Web/app/views/home.html
+++ b/CSGOMatches/Web/app/views/home.html
@@ -1,3 +1,15 @@
-﻿<h2>Home</h2>
-{{user}}
-<button ng-click="logout()" role="button">Logout</button>
+﻿<div class="match-item">
+    
+</div>
+<div class="match-item">
+
+</div>
+<div class="match-item">
+
+</div>
+<div class="match-item">
+
+</div>
+<div class="match-item">
+
+</div>
