--- a/CSGOMatches/Web/Content/styles/main.css
+++ b/CSGOMatches/Web/Content/styles/main.css
@@ -1,4 +1,43 @@
 ﻿@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 body {
     font-family: 'Open Sans', sans-serif;
+    padding: 0 !important;
+    margin: 0;
+    background-color: #f5f5f5;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+/* Header Styles */
+.header {
+    height: 100px;
+    width: 100%;
+    background-color: #0873d3;
+    box-shadow: black 0px 0px 1px 0px;
+    margin-bottom: 40px;
+}
+.header h1 {
+    margin: 0;
+    text-align: center;
+    color: white;
+    line-height: 100px;
+}
+
+/* Footer styles */
+
+.footer {
+    height: 200px;
+    width: 100%;
+    background-color: #878787;
+}
+
+/* Match item styles */
+.match-item {
+    width: 98%;
+    height: 180px;
+    background-color: white;
+    box-shadow: gray 0px 2px 10px -3px;
+    margin: 0 auto 20px auto;
 }
