--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
 <script src="~/Scripts/angular-route.js"></script>
 <script src="~/app/app.js"></script>
 <script src="~/app/services/usersService.js"></script>
+<script src="~/app/services/teamsService.js"></script>
+<script src="~/app/services/matchesService.js"></script>
 <script src="~/app/controllers/homeController.js"></script>
 <script src="~/app/controllers/loginlogoutController.js"></script>
 
