--- a/CSGOMatches/Web/app/views/home.html
+++ b/CSGOMatches/Web/app/views/home.html
@@ -1,15 +1,4 @@
-﻿<div class="match-item">
+﻿<div class="match-item" ng-repeat="match in matches">
     
 </div>
-<div class="match-item">
 
-</div>
-<div class="match-item">
-
-</div>
-<div class="match-item">
-
-</div>
-<div class="match-item">
-
-</div>
