--- a/CSGOMatches/Web/app/views/login.html
+++ b/CSGOMatches/Web/app/views/login.html
@@ -1,6 +1,4 @@
-﻿
-
-<div class="login-box">
+﻿<div class="login-box">
     <h2>Login</h2>
     <div class="email-area">
         <label for="user">Username:</label>
@@ -14,5 +12,3 @@
         <button ng-click="login()" role="button">Login</button>
     </div>  
 </div>
-
-
