--- a/CSGOMatches/Web/Views/Home/Index.cshtml
+++ b/CSGOMatches/Web/Views/Home/Index.cshtml
@@ -1,11 +1,18 @@
 ﻿<div class="header">
-    <h1>CSGO Matches</h1>
+    <div class="container">
+        <a class="headername" href="#/">
+            <h1>CSGO Matches</h1>
+        </a>
+        <a href="#login" class="login-btn">Log in</a>
+    </div>
 </div>
 <div class="content">
     <div class="container">
         <div ng-view></div>
     </div>
 </div>
-<div class="footer"></div>
+<div class="footer">
+    <h2>CSGOMatches 2016</h2>
+</div>
 
     
