--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 <script src="~/app/services/teamsService.js"></script>
 <script src="~/app/services/matchesService.js"></script>
 <script src="~/app/controllers/homeController.js"></script>
+<script src="~/app/controllers/matchController.js"></script>
 <script src="~/app/controllers/loginlogoutController.js"></script>
 
 @Scripts.Render("~/bundles/jquery")
