--- a/CSGOMatches/Web/app/views/home.html
+++ b/CSGOMatches/Web/app/views/home.html
@@ -1,12 +1,12 @@
 ﻿<div class="match-item" ng-repeat="match in matches">
-    <div class="team-one-percentage">{{match.teamOnePercentage}}%</div>
-    <div class="match-box-inner">
-        <div class="team-one-name">{{match.teamOneName}}</div>
-        <ul>
-            <li ng-repeat="map in match.maps"></li>
-        </ul>
-        <div class="teams-two-name">{{match.teamTwoName}}</div>
-    </div>
-    <div class="team-two-percentage">{{match.teamTwoPercentage}}%</div>
+    <div class="team-one-percentage" ng-click="voteForTeamOne(match)">{{match.teamOnePercentage}}%</div>
+        <div class="match-box-inner" ng-click="">
+            <div class="team-one-name">{{match.teamOneName}}</div>
+            <ul>
+                <li ng-repeat="map in match.maps"></li>
+            </ul>
+            <div class="teams-two-name">{{match.teamTwoName}}</div>
+        </div>
+    <div class="team-two-percentage" ng-click="voteForTeamTwo(match)">{{match.teamTwoPercentage}}%</div>
 </div>
 
