--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
 <script src="~/app/services/matchesService.js"></script>
 <script src="~/app/controllers/homeController.js"></script>
 <script src="~/app/controllers/matchController.js"></script>
+<script src="~/app/controllers/matchviewController.js"></script>
 <script src="~/app/controllers/loginlogoutController.js"></script>
 
 @Scripts.Render("~/bundles/jquery")
