--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body ng-app="app">
+<body ng-app="app" ng-controller="mainController">
     
         @RenderBody()
 
@@ -16,13 +16,22 @@
 <script src="~/Scripts/angular.js"></script>
 <script src="~/Scripts/angular-route.js"></script>
 <script src="~/app/app.js"></script>
+<script src="~/app/services/baseService.js"></script>
+<script src="~/app/services/commentService.js"></script>
+<script src="~/app/services/headerService.js"></script>
 <script src="~/app/services/usersService.js"></script>
+<script src="~/app/services/playersService.js"></script>
 <script src="~/app/services/teamsService.js"></script>
 <script src="~/app/services/matchesService.js"></script>
+<script src="~/app/controllers/mainController.js"></script>
 <script src="~/app/controllers/homeController.js"></script>
+<script src="~/app/controllers/playersController.js"></script>
+<script src="~/app/controllers/addeditteamController.js"></script>
+<script src="~/app/controllers/teamsController.js"></script>
 <script src="~/app/controllers/matchController.js"></script>
 <script src="~/app/controllers/matchviewController.js"></script>
-<script src="~/app/controllers/loginlogoutController.js"></script>
+<script src="~/app/controllers/loginController.js"></script>
+<script src="~/app/controllers/logoutController.js"></script>
 
 @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
