Security, clientside, apiside done?

--- a/CSGOMatches/Web/Views/Shared/_Layout.cshtml
+++ b/CSGOMatches/Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
 <script src="~/app/app.js"></script>
 <script src="~/app/services/baseService.js"></script>
 <script src="~/app/services/commentService.js"></script>
+<script src="~/app/services/mapsService.js"></script>
 <script src="~/app/services/headerService.js"></script>
 <script src="~/app/services/usersService.js"></script>
 <script src="~/app/services/playersService.js"></script>
@@ -26,6 +27,7 @@
 <script src="~/app/controllers/mainController.js"></script>
 <script src="~/app/controllers/homeController.js"></script>
 <script src="~/app/controllers/playersController.js"></script>
+<script src="~/app/controllers/mapsController.js"></script>
 <script src="~/app/controllers/addeditteamController.js"></script>
 <script src="~/app/controllers/teamsController.js"></script>
 <script src="~/app/controllers/matchController.js"></script>
