--- a/CSGOMatches/Web/app/views/home.html
+++ b/CSGOMatches/Web/app/views/home.html
@@ -4,6 +4,7 @@
     <a href="/#/teams">Tiimid</a>
     <a href="/#/addmatch">Lisa match</a>
     <a href="/#/players">Mängijad</a>
+    <a href="/#/maps">Kaardid</a>
 </div>
 <div class="match-item" ng-repeat="match in matches">
     <div class="team-one-percentage" ng-click="voteForTeamOne(match)">{{match.teamOnePercentage}}%</div>
