--- a/CSGOMatches/Web/app/views/matchview.html
+++ b/CSGOMatches/Web/app/views/matchview.html
@@ -1,7 +1,7 @@
 ﻿
 
 <div class="box-item">
-    <button ng-click="deleteMatch()">Delete</button>
+    <button ng-if="auth" ng-click="deleteMatch()">Delete</button>
     <h2>{{match.teamOneName}} - {{match.teamTwoName}}</h2>
     <h3>Comments</h3>
     <ul>
@@ -12,8 +12,10 @@
     </ul>
     <div>
         <form role="form">
-            <input type="text" ng-model="commentName"/>
-            <input type="text" ng-model="commentText"/>
+            <label for="name">Nimi: </label>
+            <input id="name" type="text" ng-model="commentName"/>
+            <label for="text">Kommentaar: </label>
+            <input id="text" type="text" ng-model="commentText"/>
             <button ng-click="addComment()">Lisa</button>
         </form>
     </div>
