--- a/CSGOMatches/Web/app/views/players.html
+++ b/CSGOMatches/Web/app/views/players.html
@@ -1,4 +1,10 @@
 ﻿<h2 style="text-align: center;">Players</h2>
 <ul>
-    <li ng-repeat="player in players">{{player.nick}}</li>
+    <li ng-repeat="player in players">{{player.nick}}<button type="button" ng-click="addToEdit(player)">Edit</button><button type="button" ng-click="delete(player.playerId)">Delete</button></li>
 </ul>
+<form>
+    <label for="playername">Player Nick</label>
+    <input type="text" id="playername" ng-model="playerName"/>
+    <button type="submit" ng-if="c" ng-click="add()">Add</button>
+    <button type="submit" ng-if="!c" ng-click="edit()">Edit</button>
+</form>
