--- a/CSGOMatches/Web/app/views/teamAddEdit.html
+++ b/CSGOMatches/Web/app/views/teamAddEdit.html
@@ -1,6 +1,8 @@
 ﻿<form>
-    <input type="text" ng-model="teamName"/>
-    <select ng-model="playersInTeam" multiple>
+    <label for="teamname">Team Name: </label>
+    <input type="text" id="teamname" ng-model="teamName"/>
+    <label for="playersinteam">Players in team: </label>
+    <select id="playersinteam" ng-model="playersInTeam" multiple>
         <option ng-repeat="player in players" value="{{player.playerId}}">{{player.nick}}</option>
     </select>
     <button ng-if="c" ng-click="addTeam()">Create</button>
